# okular-session

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: okular-session.rb
src/okular_session/: __init__.py  __main__.py  cli.py  core.py  launchd.py  watch.py
tests/: test_core.py
