[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okular-session"
version = "0.2.0"
description = "Save and restore Okular PDF sessions on macOS"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "okular-session contributors" }]
requires-python = ">=3.11"
keywords = ["okular", "pdf", "session", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/kerata/okular-session"
Repository = "https://github.com/kerata/okular-session"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.15",
    "ruff>=0.9",
]

[project.scripts]
okular-session = "okular_session.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
